[gd_scene load_steps=12 format=3 uid="uid://b2wfoje26x7fv"]

[ext_resource type="Script" uid="uid://bkwn4ro4reyj4" path="res://scripts/inventory/integration/InventoryIntegration.gd" id="1_1jxqw"]
[ext_resource type="Script" uid="uid://ckniy4t5b4kte" path="res://scripts/core/player/Player.gd" id="1_hqtel"]
[ext_resource type="Script" uid="uid://c0bnvtexowx2r" path="res://scripts/core/player/MouseLook.gd" id="2_sweqy"]
[ext_resource type="Script" uid="uid://bxbhdc3dkjtx0" path="res://scripts/core/player/PlayerMovement.gd" id="3_2hs0m"]
[ext_resource type="Script" uid="uid://6nmprawkymsv" path="res://scripts/core/input/InputManager.gd" id="4_1jxqw"]
[ext_resource type="Script" uid="uid://b71tsw7jkvbfo" path="res://scripts/core/interaction/InteractionSystem.gd" id="5_interaction"]
[ext_resource type="Script" uid="uid://2kdu455x8lmy" path="res://scripts/core/interaction/InteractionRaycaster.gd" id="6_raycaster"]
[ext_resource type="Script" uid="uid://bar11whdhhkdq" path="res://scripts/ui/core/InteractionUI.gd" id="7_ui"]
[ext_resource type="Script" uid="uid://cb3mrgt7pgsjh" path="res://scripts/inventory/ui/PlayerInventorySetup.gd" id="9_b26j0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dw050"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_b26j0"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_hqtel")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_dw050")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_b26j0")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]

[node name="MouseLook" type="Node" parent="."]
script = ExtResource("2_sweqy")

[node name="PlayerMovement" type="Node" parent="."]
script = ExtResource("3_2hs0m")

[node name="InputManager" type="Node" parent="."]
script = ExtResource("4_1jxqw")

[node name="InteractionSystem" type="Node" parent="."]
script = ExtResource("5_interaction")

[node name="InteractionRaycaster" type="Node" parent="InteractionSystem"]
script = ExtResource("6_raycaster")

[node name="InteractionUI" type="Control" parent="InteractionSystem"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("7_ui")

[node name="InventoryIntegration" type="Node" parent="."]
script = ExtResource("1_1jxqw")

[node name="InventorySetup" type="Node" parent="."]
script = ExtResource("9_b26j0")
